--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Happy Birthday</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="birthdayCard">
+       <div class="cardFront">
+        <h3 class="happy">HAPPY BIRTHDAY PARTH</h3>
+        <div class="cake">
+            <div class="top-layer"></div>
+            <div class="middle-layer"></div>
+            <div class="bottom-layer"></div>
+            <div class="candle"></div>
+        </div>
+       </div>
+      <div class="cardInside">
+        <h3 class="back">HAPPY BIRTHDAY BABDYA!</h3>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>On behalf of <i>Shenitizer</i> and <i>Shemde</i> community we wish you a very Happy Birthday and a Swooshtifull Career ahead.</p>
+      </div>
+    </div>
+  </body>
+</html>
