--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,6 +18,7 @@
             <div class="bottom-layer"></div>
             <div class="candle"></div>
         </div>
+        <img src="gojo.jpg" alt="Gojo Image" class="split-image" />
        </div>
       <div class="cardInside">
         <h3 class="back">HAPPY BIRTHDAY BABDYA!</h3>
