--- a/index.html
+++ b/index.html
@@ -9,33 +9,35 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="birthdayCard">
-       <div class="cardFront">
-        <h3 class="happy">HAPPY BIRTHDAY PARTH</h3>
-        <div class="cake">
+    <div class="birthdayCardContainer">
+      <div class="birthdayCard">
+        <div class="cardFront">
+          <h3 class="happy">HAPPY BIRTHDAY PARTH</h3>
+          <div class="cake">
             <div class="top-layer"></div>
             <div class="middle-layer"></div>
             <div class="bottom-layer"></div>
             <div class="candle"></div>
+          </div>
+          <img src="gojo.jpg" alt="Gojo Image" class="split-image" />
         </div>
-        <img src="gojo.jpg" alt="Gojo Image" class="split-image" />
-       </div>
-      <div class="cardInside">
-        <h3 class="back">HAPPY BIRTHDAY BABDYA!</h3>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p>On behalf of <i>Shenitizer</i> and <i>Shemde</i> community we wish you a very Happy Birthday and a Swooshtifull Career ahead.</p>
+        <div class="cardInside">
+          <h3 class="back">HAPPY BIRTHDAY BABDYA!</h3>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <p>On behalf of <i>Shenitizer</i> and <i>Shemde</i> community we wish you a very Happy Birthday and a Swooshtifull Career ahead.</p>
+        </div>
       </div>
     </div>
   </body>
