--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>On behalf of <i>Shenitizer</i> and <i>Shemde</i> community we wish you a very Happy Birthday and a Swooshtifull Career ahead.</p>
         </div>
       </div>
-      <img src="gojo.jpeg" alt="Gojo Image" class="split-image" />
+      <img src="gojo.jpg" alt="Gojo Image" class="split-image" />
     </div>
   </body>
 </html>
